--- a/src/app/Ui/Modules/reportes/components/design-reporte/design-page/design-page-tabla-datos/design-page-tabla-datos.component.css
+++ b/src/app/Ui/Modules/reportes/components/design-reporte/design-page/design-page-tabla-datos/design-page-tabla-datos.component.css
@@ -1,78 +1,3 @@
-.container-principal {
-  height: auto;
-
-  padding: 2rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  gap: 2rem;
-}
-
-.container-final,
-.container-portada {
-  width: 49.625rem;
-  height: 70.1875rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  background-color: white;
-  box-shadow: 10px 10px 15px rgba(197, 197, 197, 0.5);
-  position: relative;
-  flex-shrink: 0;
-}
-
-
-.container-header-pdf {
-  display: flex;
-  gap: 1rem;
-  align-items: center;
-}
-
-.container-header-pdf button {
-  color: #20477E;
-  border: 2px solid #20477E;
-  border-radius: 5px;
-  padding: .4rem 1rem;
-}
-
-.container-header-pdf button:hover {
-  color:  rgba(0, 209, 174, 1);
-  border: 2px solid rgba(0, 209, 174, 1);
-  transition: all .2s ease-in;
-}
-
-.container-imagen {
-  height: 400px;
-}
-
-.container-final .container-imagen {
-  height: 100%;
-}
-
-.container-borde {
-  width: 100%;
-  height: 100%;
-  padding: 2rem;
-  position: absolute;
-  z-index: 1;
-  box-sizing: border-box;
-}
-
-.container-borde .borde-design {
-  width: 100%;
-  height: 100%;
-  border: 10px solid #20477E;
-}
-
-.container-imagen img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  filter: grayscale(1);
-}
-
 .container-datos {
   padding: 0 1rem;
   box-sizing: border-box;
@@ -81,7 +6,7 @@
 .container-apartado-datos {
   position: absolute;
   width: 20rem;
-  height: 100%;
+  height: auto;
   z-index: 2;
   top: 0;
   left: 5rem;
@@ -126,8 +51,9 @@
 }
 
 .container-datos-page {
-  width:  70.1875rem;
-  height: 49.625rem;
+  /* width:  70.1875rem; */
+  /* height: 49.625rem; */
+  height: auto;
   display: flex;
   flex-direction: column;
   background-color: white;
@@ -135,4 +61,5 @@
   position: relative;
   flex-shrink: 0;
   padding: 1rem;
+  margin: 0 1rem;
 }
