--- a/src/app/Ui/Modules/reportes/components/design-reporte/design-page/design-page-final/design-page-final.component.html
+++ b/src/app/Ui/Modules/reportes/components/design-reporte/design-page/design-page-final/design-page-final.component.html
@@ -17,7 +17,7 @@
       <div class="container-title-principal">
         <h1>DB INVENTORY</h1>
         <H4>System</H4>
-        <H3>2025</H3>
+        <H3>{{currentYear}}</H3>
       </div>
       <div class="container-apartado-datos-adicionales">
         <h4>Sistema de</h4>
