--- a/src/app/Ui/Modules/reportes/components/design-reporte/design-report-inventario/design-report-inventario.component.css
+++ b/src/app/Ui/Modules/reportes/components/design-reporte/design-report-inventario/design-report-inventario.component.css
@@ -36,6 +36,8 @@
   border: 2px solid #20477E;
   border-radius: 5px;
   padding: .4rem 1rem;
+  display: flex;
+  gap: 0.8rem;
 }
 
 .container-header-pdf button:hover {
