--- a/src/app/Ui/Modules/reportes/components/design-reporte/design-page/design-page-portada/design-page-portada.component.html
+++ b/src/app/Ui/Modules/reportes/components/design-reporte/design-page/design-page-portada/design-page-portada.component.html
@@ -16,12 +16,12 @@
     <div class="container-datos">
       <div class="container-title-principal">
         <h1>REPORTE INVENTARIO</h1>
-        <H4>{{nombreInventario || 'Inventario General'}}</H4>
+        <H4>{{ nombreInventario || 'Inventario General' }}</H4>
         <H3>{{ currentYear }}</H3>
       </div>
       <div class="container-apartado-datos-adicionales">
         <h4>Generado por</h4>
-        <h4>Edwin Alexander Seclen Yupanqui</h4>
+        <h4>{{ nombreUsuarioGeneroReporte }}</h4>
       </div>
     </div>
   </div>
