Tabla rol de usuarios usando angular material

--- a/src/app/Ui/Modules/configuration/Tipo_usuario/components/header/header-page-table-tipo-usuario/header-page-table-tipo-usuario.component.css
+++ b/src/app/Ui/Modules/configuration/Tipo_usuario/components/header/header-page-table-tipo-usuario/header-page-table-tipo-usuario.component.css
@@ -1,4 +1,4 @@
 .container-header {
-  height: 8rem;
+  height: auto;
   background: linear-gradient(to right, var(--color-principal-3), var(--color-principal-1) );
 }
