--- a/src/app/Ui/Modules/Carga_Inventario/Page/registro-carga-inventarios/registro-carga-inventarios.component.css
+++ b/src/app/Ui/Modules/Carga_Inventario/Page/registro-carga-inventarios/registro-carga-inventarios.component.css
@@ -17,6 +17,10 @@
   font-size: .8rem;
 }
 
+mat-form-field {
+  width: 100%;
+}
+
 .container-space-y-2 {
   display: flex;
   flex-direction: column;
