--- a/src/app/Ui/Modules/configuration/Tipo_usuario/components/tables/table-lista-tipo-usuario/table-lista-tipo-usuario.component.html
+++ b/src/app/Ui/Modules/configuration/Tipo_usuario/components/tables/table-lista-tipo-usuario/table-lista-tipo-usuario.component.html
@@ -9,7 +9,7 @@
 
     <ng-container matColumnDef="Estado">
       <th mat-header-cell *matHeaderCellDef> Estado </th>
-      <td mat-cell *matCellDef="let element"> {{element.estado}} </td>
+      <td mat-cell *matCellDef="let element"> @if (element.estado == '1') { Activo } @else {Inactivo} </td>
     </ng-container>
 
     <ng-container matColumnDef="Fecha Registro">
@@ -26,7 +26,7 @@
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
 
-  <mat-paginator [pageSizeOptions]="[5, 10, 20]"
+  <mat-paginator [pageSizeOptions]="[5, 10, 15, 20]"
                  showFirstLastButtons
                  aria-label="Select page of periodic elements">
   </mat-paginator>
