--- a/src/app/Ui/Modules/reportes/components/design-reporte/design-page/design-page-tabla-datos/design-page-tabla-datos.component.html
+++ b/src/app/Ui/Modules/reportes/components/design-reporte/design-page/design-page-tabla-datos/design-page-tabla-datos.component.html
@@ -250,7 +250,7 @@
               <div class="px-3 py-2">
                 <span
                   class="font-semibold text-xs text-gray-800 dark:text-neutral-200"
-                  >{{item.codigoproducto}}</span
+                  >{{item.Codigoproducto}}</span
                 >
               </div>
             </td>
@@ -305,7 +305,7 @@
               <div class="px-3 py-2">
                 <span
                   class="font-semibold text-xs text-gray-800 dark:text-neutral-200"
-                  >{{item.stockfisico}}</span
+                  >{{item.stockF}}</span
                 >
               </div>
             </td>
